deploy/terraform/modules/ecs-base/orders.tf
resource "aws_ecs_task_definition" "orders" {
  family                   = "${local.full_environment_prefix}-orders"
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn

  cpu = 256
  memory = 512

  container_definitions    = <<DEFINITION
[
  {
    "name": "orders",
    "image": "watchn/watchn-orders:${var.image_tag}",
    "memory": 512,
    "essential": true,
    "environment": [
      {
        "name": "SPRING_DATASOURCE_WRITER_URL",
        "value": "jdbc:mysql://${module.orders_rds.writer_endpoint}:3306/orders"
      },
      {
        "name": "SPRING_DATASOURCE_WRITER_USERNAME",
        "value": "${module.orders_rds.username}"
      },
      {
        "name": "SPRING_DATASOURCE_WRITER_PASSWORD",
        "value": "${module.orders_rds.password}"
      },
      {
        "name": "SPRING_DATASOURCE_READER_URL",
        "value": "jdbc:mysql://${module.orders_rds.reader_endpoint}:3306/orders"
      },
      {
        "name": "SPRING_DATASOURCE_READER_USERNAME",
        "value": "${module.orders_rds.username}"
      },
      {
        "name": "SPRING_DATASOURCE_READER_PASSWORD",
        "value": "${module.orders_rds.password}"
      },
      {
        "name": "SPRING_PROFILES_ACTIVE",
        "value": "mysql"
      },
      {
        "name": "JAVA_OPTS",
        "value": "-XX:MaxRAMPercentage=75.0 -Djava.security.egd=file:/dev/urandom"
      }
    ],
    "portMappings": [
      {
        "protocol": "tcp",
        "containerPort": 8080
      }
    ],
    "healthcheck": {
      "command" : [ 
        "CMD-SHELL", "curl -f http://localhost:8080/actuator/health || exit 1"
      ],
      "interval" : 30,
      "retries" : 3,
      "startPeriod" : 45,
      "timeout" : 10
    },
    "linuxParameters": {
      "capabilities": {
        "drop": ["ALL"]
      }
    },
    "logConfiguration": {
      "logDriver": "awslogs",
      "options": {
        "awslogs-group": "${aws_cloudwatch_log_group.logs.name}",
        "awslogs-region": "${var.region}",
        "awslogs-stream-prefix": "ecs"
      }
    }
  }
]
DEFINITION
}

resource "aws_ecs_service" "orders" {
  name             = "${local.full_environment_prefix}-orders"
  cluster          = aws_ecs_cluster.cluster.id
  task_definition  = aws_ecs_task_definition.orders.arn
  desired_count    = 3
  platform_version = "1.4.0"

  network_configuration {
    security_groups = [aws_security_group.nsg_task.id, aws_security_group.orders.id]
    subnets         = module.vpc.private_subnets
  }

  service_registries {
    registry_arn = aws_service_discovery_service.orders.arn
  }

  capacity_provider_strategy {
    capacity_provider  = "FARGATE"
    weight = 1
    base = 3
  }

  capacity_provider_strategy {
    capacity_provider  = "FARGATE_SPOT"
    weight = 4
  }
}

resource "aws_security_group" "orders" {
  name_prefix = "${var.environment_name}-orders"
  vpc_id      = module.vpc.vpc_id

  description = "Marker SG for orders service"
}

resource "aws_security_group_rule" "orders_rds_ingress" {
  description = "From allowed CIDRs"

  type                      = "ingress"
  from_port                 = 3306
  to_port                   = 3306
  protocol                  = "tcp"
  source_security_group_id  = aws_security_group.orders.id
  security_group_id         = module.orders_rds.security_group_id
}

module "orders_rds" {
  source = "../aws-global-rds-mysql"

  environment_name = local.full_environment_prefix
  instance_name    = "orders"
  vpc_id           = module.vpc.vpc_id
  subnet_ids       = module.vpc.database_subnets
  db_name          = "orders"
}

resource "aws_service_discovery_service" "orders" {
  name  = "orders"

  dns_config {
    namespace_id = aws_service_discovery_private_dns_namespace.sd.id

    dns_records {
      ttl  = 10
      type = "A"
    }

    routing_policy = "MULTIVALUE"
  }

  health_check_custom_config {
    failure_threshold = 1
  }
}
